Add login page, and update arrangement/organization of files

--- a/restaurants.html
+++ b/restaurants.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plateful - Customer Page</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/restaurant.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
@@ -15,8 +15,8 @@
       <h1>Plateful</h1>
     </div>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#restaurants">Restaurants</a>
+      <a href="dashboard.html">Home</a>
+      <a href="restaurant.html">Restaurants</a>
       <a href="#cart" id="cart-link">Cart (0)</a>
     </nav>
   </header>
@@ -122,6 +122,6 @@
   <script>
     AOS.init();
   </script>
-  <script src="scripts.js"></script>
+  <script src="scripts/restaurant.js"></script>
 </body>
 </html>
