--- a/restaurants.html
+++ b/restaurants.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plateful - Customer Page</title>
-  <link rel="stylesheet" href="styles/restaurant.css">
+  <link rel="stylesheet" href="styles/catalog.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
@@ -122,6 +122,6 @@
   <script>
     AOS.init();
   </script>
-  <script src="scripts/restaurant.js"></script>
+  <script src="scripts/catalog.js"></script>
 </body>
 </html>
