--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       <h1>Plateful</h1>
     </div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="restaurants.html">Restaurants</a>
     </nav>
   </header>
