--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout - Plateful</title>
-  <link rel="stylesheet" href="checkout.css">
+  <link rel="stylesheet" href="styles/checkout.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
@@ -28,6 +28,6 @@
     </div>
   </main>
 
-  <script src="checkout.js"></script>
+  <script src="scripts/checkout.js"></script>
 </body>
 </html>
