--- a/restaurantOnboarding.html
+++ b/restaurantOnboarding.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Management - Plateful</title>
-  <link rel="stylesheet" href="styles/restaurant.css">
+  <title>Restaurant Onboarding - Plateful</title>
+  <link rel="stylesheet" href="styles/restaurantOnboarding.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
@@ -24,30 +24,40 @@
       <form id="onboarding-form">
         <div class="step active" id="step-1">
           <h2>What's your restaurant's name?</h2>
-          <input id="restaurant-name" type="text" placeholder="Restaurant Name" required>
+          <div class="input-group">
+            <input id="restaurant-name" type="text" placeholder="Restaurant Name" required>
+          </div>
           <button type="button" onclick="nextStep(2)">Next</button>
         </div>
         <div class="step" id="step-2">
           <h2>What's the address of your restaurant?</h2>
-          <input id="restaurant-address" type="text" placeholder="Restaurant Address" required>
+          <div class="input-group">
+            <input id="restaurant-address" type="text" placeholder="Restaurant Address" required>
+          </div>
           <button type="button" onclick="prevStep(1)">Back</button>
           <button type="button" onclick="nextStep(3)">Next</button>
         </div>
         <div class="step" id="step-3">
           <h2>What's the phone number of your restaurant?</h2>
-          <input id="restaurant-phone" type="tel" placeholder="Phone Number" required>
+          <div class="input-group">
+            <input id="restaurant-phone" type="tel" placeholder="Phone Number" required>
+          </div>
           <button type="button" onclick="prevStep(2)">Back</button>
           <button type="button" onclick="nextStep(4)">Next</button>
         </div>
         <div class="step" id="step-4">
           <h2>Provide your Google Profile URL</h2>
-          <input id="google-profile" type="url" placeholder="Google Profile URL" required>
+          <div class="input-group">
+            <input id="google-profile" type="url" placeholder="Google Profile URL" required>
+          </div>
           <button type="button" onclick="prevStep(3)">Back</button>
           <button type="button" onclick="nextStep(5)">Next</button>
         </div>
         <div class="step" id="step-5">
           <h2>Upload a banner image for your restaurant</h2>
-          <input id="restaurant-banner" type="file" accept="image/*" required>
+          <div class="input-group">
+            <input id="restaurant-banner" type="file" accept="image/*" required>
+          </div>
           <button type="button" onclick="prevStep(4)">Back</button>
           <button type="button" onclick="nextStep(6)">Next</button>
         </div>
@@ -64,29 +74,18 @@
           <button type="button" onclick="completeOnboarding()">Complete Onboarding</button>
         </div>
       </form>
-    </div>
-
-    <div class="management-box" id="management-box" style="display: none;">
-      <h2>Restaurant Management</h2>
-      <div class="menu-management">
-        <h3>Menu Items</h3>
-        <div class="menu-form">
-          <input type="text" id="item-name" placeholder="Item Name">
-          <input type="number" id="item-price" placeholder="Item Price">
-          <input type="file" id="item-image" accept="image/*">
-          <button onclick="addItem()">Add Item</button>
-        </div>
-        <div class="menu-items" id="menu-items"></div>
+      <div id="error-message" class="popup" style="display: none;">
+        <p>Please fill in all required fields.</p>
+        <button onclick="closePopup()">Close</button>
       </div>
-      <div class="live-orders">
-        <h3>Live Orders</h3>
-        <div id="orders"></div>
+      <div id="success-message" style="display: none;">
+        <h2>Processing your request...</h2>
       </div>
     </div>
   </div>
   <footer>
     <p>&copy; 2024 Plateful. All rights reserved.</p>
   </footer>
-  <script src="scripts/restaurant.js"></script>
+  <script src="scripts/restaurantOnboarding.js"></script>
 </body>
 </html>
