--- a/userOnboarding.html
+++ b/userOnboarding.html
@@ -8,15 +8,20 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <h2>Plateful</h2>
-      <nav>
-        <ul>
-          <li><a href="#user-onboarding">User Onboarding</a></li>
-        </ul>
-      </nav>
+  <header>
+    <div class="logo">
+      <h1>Plateful</h1>
     </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#user-onboarding">User Onboarding</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container">
     <div class="content">
       <section id="user-onboarding" class="onboarding-box">
         <h2>User Onboarding</h2>
