--- a/userOnboarding.html
+++ b/userOnboarding.html
@@ -17,7 +17,6 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#user-onboarding">User Onboarding</a></li>
       </ul>
     </nav>
   </header>
@@ -55,6 +54,13 @@
           </div>
         </form>
       </section>
+    </div>
+  </div>
+  <div id="success-popup" class="popup">
+    <div class="popup-content">
+      <h3>Onboarding Completed</h3>
+      <p>Thank you for providing your details.</p>
+      <button onclick="redirectToRestaurants()">Continue</button>
     </div>
   </div>
   <script src="scripts/userOnboarding.js"></script>
