--- a/userOnboarding.html
+++ b/userOnboarding.html
@@ -56,6 +56,13 @@
       </section>
     </div>
   </div>
+  <div id="error-popup" class="popup">
+    <div class="popup-content">
+      <h3>Error</h3>
+      <p>Please fill out this field.</p>
+      <button onclick="closeErrorPopup()">Close</button>
+    </div>
+  </div>
   <div id="success-popup" class="popup">
     <div class="popup-content">
       <h3>Onboarding Completed</h3>
