--- a/home.html
+++ b/home.html
@@ -1,80 +1,47 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plateful - Home</title>
-  <link rel="stylesheet" href="styles/home.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-</head>
-<body>
-  <header>
-    <div class="logo">
-      <h1>Plateful</h1>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="restaurants.html">Restaurants</a>
-      <a href="about.html">About</a>
-      <a href="cart.html">Cart</a>
-    </nav>
-  </header>
-  <main>
-    <section class="hero" data-aos="fade-up">
-      <h2>Reducing Food Waste, One Plate at a Time</h2>
-      <p>Join us in our mission to reduce food waste by connecting people with fresh leftover food from restaurants and cafes.</p>
-    </section>
-    <section class="mission" data-aos="fade-up">
-      <h2>Our Mission</h2>
-      <p>At Plateful, our mission is to reduce food waste, promote sustainable consumption, and foster community connections. We aim to achieve this by connecting individuals with excess homegrown produce or leftover meals from restaurants and cafes with those who can utilize them.</p>
-    </section>
-    <section class="how-it-works" data-aos="fade-up">
-      <h2>How It Works</h2>
-      <div class="steps">
-        <div class="step">
-          <img src="https://img.icons8.com/clouds/100/000000/food-service.png" alt="Order Food">
-          <h3>Order Food</h3>
-          <p>Browse and order fresh leftover food from nearby restaurants and cafes.</p>
-        </div>
-        <div class="step">
-          <img src="https://img.icons8.com/clouds/100/000000/qr-code.png" alt="Scan QR Code">
-          <h3>Scan UPI QR Code</h3>
-          <p>Scan the UPI QR code to make the payment and confirm your order.</p>
-        </div>
-        <div class="step">
-          <img src="https://img.icons8.com/clouds/100/000000/pickup-point.png" alt="Pick Up Food">
-          <h3>Pick Up Food</h3>
-          <p>Visit the restaurant to pick up your fresh leftover food.</p>
-        </div>
-      </div>
-    </section>
-    <section class="faqs" data-aos="fade-up">
-      <h2>Frequently Asked Questions</h2>
-      <div class="faq">
-        <h3>Is delivery available?</h3>
-        <p>No, we only offer pickup services. You need to visit the restaurant to pick up your food.</p>
-      </div>
-      <div class="faq">
-        <h3>How fresh is the leftover food?</h3>
-        <p>All leftover food listed on our platform is fresh and safe to consume, meeting the highest standards of food safety.</p>
-      </div>
-      <div class="faq">
-        <h3>How do I make a payment?</h3>
-        <p>You can make a payment by scanning the UPI QR code provided by the restaurant.</p>
-      </div>
-    </section>
-    <section class="contact" data-aos="fade-up">
-      <h2>Contact Us</h2>
-      <p>For any queries or support, feel free to contact us at <a href="mailto:support@plateful.com">support@plateful.com</a>.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2024 Plateful. All rights reserved.</p>
-  </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="./logo.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		
+		<link href="./_app/immutable/assets/0.B9_q_LBh.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.Dcg2ZoHn.css" rel="stylesheet"><title>Plateful | Home</title><!-- HEAD_svelte-1op7rka_START --><!-- HEAD_svelte-1op7rka_END -->
+	</head>
+	<body data-sveltekit-preload-data="hover" class="bg-cream">
+		<div style="display: contents">  <div class="flex h-screen flex-col"><div class="flex h-16 items-center gap-2 bg-headerBg p-2 shadow"><a href="/" data-svelte-h="svelte-pi79yk"><img class="w-16" alt="logo" src="/_app/immutable/assets/logo.BOa9SlQb.png"></a> <a class="ml-auto rounded-md bg-slate-400 p-2 transition-colors hover:bg-slate-500" href="/login" data-svelte-h="svelte-130bcuv">Sign In</a></div>  <div><div class="m-8 flex flex-col gap-8"><div class="rounded-md bg-slate-100 p-8 text-center shadow" data-svelte-h="svelte-2btqfi"><p class="text-4xl font-bold text-blueNew">Reducing Food Waste, One Plate at a Time</p> <p class="mt-4 text-xl text-slate-500">Join us in our mission to reduce food waste by connecting people with fresh leftover food
+					from restaurants and cafes.</p></div> <div class="flex flex-col items-center text-center" data-svelte-h="svelte-uno1cv"><p class="text-3xl font-bold text-blueNew">Our Mission</p> <p class="mt-4 text-xl text-slate-500">At Plateful, our mission is to reduce food waste, promote sustainable consumption, and
+					foster community connections. We aim to achieve this by connecting individuals with excess
+					homegrown produce or leftover meals from restaurants and cafes with those who can utilize
+					them.</p></div> <div class="flex flex-col items-center text-center"><p class="mb-4 text-3xl font-bold text-blueNew" data-svelte-h="svelte-pjg4au">How It Works</p> <div class="grid w-full grid-cols-3 gap-8"><div class="rounded-md bg-white p-4"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em" class="mx-auto h-16 w-16 text-center text-redNew"><!-- HTML_TAG_START --><path fill="currentColor" d="M18.06 23h1.66c.84 0 1.53-.65 1.63-1.47L23 5.05h-5V1h-1.97v4.05h-4.97l.3 2.34c1.71.47 3.31 1.32 4.27 2.26c1.44 1.42 2.43 2.89 2.43 5.29V23M1 22v-1h15.03v1c0 .54-.45 1-1.03 1H2c-.55 0-1-.46-1-1m15.03-7C16.03 7 1 7 1 15h15.03M1 17h15v2H1v-2Z"/><!-- HTML_TAG_END --></svg> <p class="text-2xl font-bold text-blueNew" data-svelte-h="svelte-1jvniiy">Order Food</p> <p class="text-slate-500" data-svelte-h="svelte-ul0xtf">Browse and order fresh leftover food from nearby restaurants and cafes.</p></div> <div class="rounded-md bg-white p-4"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em" class="mx-auto h-16 w-16 text-center text-redNew"><!-- HTML_TAG_START --><path fill="currentColor" d="M4 4h6v6H4V4m16 0v6h-6V4h6m-6 11h2v-2h-2v-2h2v2h2v-2h2v2h-2v2h2v3h-2v2h-2v-2h-3v2h-2v-4h3v-1m2 0v3h2v-3h-2M4 20v-6h6v6H4M6 6v2h2V6H6m10 0v2h2V6h-2M6 16v2h2v-2H6m-2-5h2v2H4v-2m5 0h4v4h-2v-2H9v-2m2-5h2v4h-2V6M2 2v4H0V2a2 2 0 0 1 2-2h4v2H2m20-2a2 2 0 0 1 2 2v4h-2V2h-4V0h4M2 18v4h4v2H2a2 2 0 0 1-2-2v-4h2m20 4v-4h2v4a2 2 0 0 1-2 2h-4v-2h4Z"/><!-- HTML_TAG_END --></svg> <p class="text-2xl font-bold text-blueNew" data-svelte-h="svelte-1klsagl">Scan UPI QR Code</p> <p class="text-slate-500" data-svelte-h="svelte-1wsf9ez">Scan the UPI QR code to make the payment and confirm your order.</p></div> <div class="rounded-md bg-white p-4"><svg viewBox="0 0 24 24" width="1.2em" height="1.2em" class="mx-auto my-2 h-16 w-16 text-center text-redNew"><!-- HTML_TAG_START --><path fill="currentColor" d="M16 6h-5.5v4H1v5h2a3 3 0 0 0 3 3a3 3 0 0 0 3-3h6a3 3 0 0 0 3 3a3 3 0 0 0 3-3h2v-3c0-1.11-.89-2-2-2h-2l-3-4m-4 1.5h3.5l1.96 2.5H12V7.5m-6 6A1.5 1.5 0 0 1 7.5 15A1.5 1.5 0 0 1 6 16.5A1.5 1.5 0 0 1 4.5 15A1.5 1.5 0 0 1 6 13.5m12 0a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5Z"/><!-- HTML_TAG_END --></svg> <p class="text-2xl font-bold text-blueNew" data-svelte-h="svelte-e7yg8s">Pick Up Food</p> <p class="text-slate-500" data-svelte-h="svelte-goezq6">Visit the restaurant to pick up your fresh leftover food.</p></div></div></div></div></div></div> 
+			
+			<script>
+				{
+					__sveltekit_1xnhmgg = {
+						base: new URL(".", location).pathname.slice(0, -1)
+					};
+
+					const element = document.currentScript.parentElement;
+
+					const data = [null,null];
+
+					Promise.all([
+						import("./_app/immutable/entry/start.DN8EudKR.js"),
+						import("./_app/immutable/entry/app.D-BME2Nd.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element, {
+							node_ids: [0, 2],
+							data,
+							form: null,
+							error: null
+						});
+					});
+				}
+			</script>
+		</div>
+	</body>
 </html>
